# corgi_ros_ws

.catkin_tools/profiles/default/: build.yaml  devel_collisions.txt
devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
devel/.private/catkin_tools_prebuild/: .catkin  local_setup.sh  setup.sh
devel/.private/catkin_tools_prebuild/lib/pkgconfig/: catkin_tools_prebuild.pc
devel/.private/catkin_tools_prebuild/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig.cmake
devel/.private/quadruped/: setup.sh
devel/.private/quadruped/include/quadruped/: LegStamped.h  RobotStamped.h  force.h  impedance.h  motor.h
devel/.private/quadruped/lib/pkgconfig/: quadruped.pc
devel/.private/quadruped/lib/python3/dist-packages/quadruped/msg/: _LegStamped.py  _RobotStamped.py  __init__.py  _force.py  _impedance.py  _motor.py
devel/.private/quadruped/lib/quadruped/: doc.pb.cc  doc.pb.h  force.pb.cc  force.pb.h  geometry.pb.cc  geometry.pb.h  motor.pb.cc  motor.pb.h  power.pb.cc  power.pb.h  robot.pb.cc  robot.pb.h  sensor.pb.cc  sensor.pb.h
devel/.private/quadruped/share/common-lisp/ros/quadruped/msg/: LegStamped.lisp  RobotStamped.lisp  _package.lisp  _package_LegStamped.lisp  _package_RobotStamped.lisp  _package_force.lisp  _package_impedance.lisp  _package_motor.lisp  force.lisp  impedance.lisp  motor.lisp  quadruped-msg.asd
devel/.private/quadruped/share/gennodejs/ros/quadruped/msg/: LegStamped.js  RobotStamped.js  _index.js  force.js  impedance.js  motor.js
devel/.private/quadruped/share/quadruped/cmake/: quadruped-msg-paths.cmake  quadrupedConfig.cmake
devel/.private/quadruped/share/roseus/ros/quadruped/: manifest.l
devel/.private/quadruped/share/roseus/ros/quadruped/msg/: LegStamped.l  RobotStamped.l  force.l  impedance.l  motor.l
devel/include/quadruped/: LegStamped.h  RobotStamped.h  force.h  impedance.h  motor.h
devel/lib/pkgconfig/: catkin_tools_prebuild.pc  quadruped.pc
devel/lib/python3/dist-packages/quadruped/: __init__.py
devel/lib/python3/dist-packages/quadruped/msg/: _LegStamped.py  _RobotStamped.py  __init__.py  _force.py  _impedance.py  _motor.py
devel/lib/quadruped/: cpg_node  cpg_node_webot  doc.pb.cc  doc.pb.h  force.pb.cc  force.pb.h  geometry.pb.cc  geometry.pb.h  motor.pb.cc  motor.pb.h  power.pb.cc  power.pb.h  robot.pb.cc  robot.pb.h  ros_corgi_bridge  sensor.pb.cc  sensor.pb.h
devel/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig-version.cmake  catkin_tools_prebuildConfig.cmake
devel/share/common-lisp/ros/quadruped/msg/: LegStamped.lisp  RobotStamped.lisp  _package.lisp  _package_LegStamped.lisp  _package_RobotStamped.lisp  _package_force.lisp  _package_impedance.lisp  _package_motor.lisp  force.lisp  impedance.lisp  motor.lisp  quadruped-msg.asd
devel/share/gennodejs/ros/quadruped/: _index.js
devel/share/gennodejs/ros/quadruped/msg/: LegStamped.js  RobotStamped.js  _index.js  force.js  impedance.js  motor.js
devel/share/quadruped/cmake/: quadruped-msg-extras.cmake  quadruped-msg-paths.cmake  quadrupedConfig-version.cmake  quadrupedConfig.cmake
devel/share/roseus/ros/quadruped/: manifest.l
devel/share/roseus/ros/quadruped/msg/: LegStamped.l  RobotStamped.l  force.l  impedance.l  motor.l
logs/quadruped/: build.cmake.000.log.stderr  build.cmake.001.log.stderr  build.make.000.log.stderr
src/quadruped/: .gitignore  CMakeLists.txt  README.md  real.sh  simulation.sh
src/quadruped/cmake/: common.cmake
src/quadruped/js/control_panel/: Load_proto.js  index.html  index.js  quadruped.js
src/quadruped/js/control_panel/css/: button.css  style.css
src/quadruped/launch/: bridge.launch
src/quadruped/msg/: LegStamped.msg  RobotStamped.msg  force.msg  impedance.msg  motor.msg
src/quadruped/protos/: doc.proto  force.proto  geometry.proto  motor.proto  power.proto  robot.proto  sensor.proto
src/quadruped/src/: CMakeLists.txt
src/quadruped/src/cpg/: CMakeLists.txt  cpg.cpp  cpg.hpp
src/quadruped/src/estimation/: ContactMap.hpp  definition.cpp  definition.hpp
src/quadruped/src/fpga_driver/: CMakeLists.txt
src/quadruped/src/fpga_driver/include/: fsm.hpp
src/quadruped/src/fpga_driver/src/: fpga_server.cpp  fsm.cpp  testfpga.cpp
src/quadruped/src/fsm/: CMakeLists.txt  FSM_FootholdPlanner.cpp  FSM_listen.cpp  FiniteStateMachine.h  Foothold.h  Trajectory.h
src/quadruped/src/image/: CMakeLists.txt  image.cpp  image_listen.cpp  img_utils.hpp
src/quadruped/src/imu/: CMakeLists.txt  cx5.hpp  imu.cpp  imu_listen.cpp
src/quadruped/src/kinematic/: CMakeLists.txt  Leg.cpp  Leg.hpp  LinkLegModel.cpp  LinkLegModel.hpp  RigidBodyKinematic.hpp
src/quadruped/src/ros_corgi_bridge/: CMakeLists.txt  compile_commands.json
src/quadruped/src/ros_corgi_bridge/.cache/clangd/index/: main.cpp.722A5CDE67C8DBA7.idx
src/quadruped/src/ros_corgi_bridge/src/: main.cpp
