include_directories(${CMAKE_CURRENT_LIST_DIR})
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/cpg)
# add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/imu)
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/kinematic)
# add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/fsm)
# add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/estimation)
# add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/image)
# add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/fpga_driver)
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/ros_corgi_bridge)
